--- a/libosdk/i386/Makefile
+++ b/libosdk/i386/Makefile
@@ -1,5 +1,4 @@
 all:
-	nasm -f elf i386.asm -o libosdk-i386
+	nasm -f elf i386.asm -o libosdk-i386.o
 clean:
-	rm -f libosdk-i386
-
+	rm -f libosdk-i386.o
