--- a/libosdk/exampleos/pascal/Makefile
+++ b/libosdk/exampleos/pascal/Makefile
@@ -1,7 +1,15 @@
 all:
-	fpc test.pas -o test.o
-	ld -r test.o -o kernel.o
-	ld -e start -Ttext 0x100000 ../../i386/libosdk.o kernel.o -o kernel
+	fpc -Fl../../i386 units/libosdk.pas
+	fpc units/console.pas
+	fpc units/multiboot.pas
+	fpc -Us  -a -Aas -Fiinclude -Fuunits -n -O3 -Op3 -Si -Sc -Sg -Xd -Tlinux -Rintel units/system.pas
+	fpc -a -Aas -Fiinclude -Fuunits -n -O3 -Op3 -Si -Sc -Sg -Xd -Tlinux -Rintel kernel.pas
+	ld ../../i386/libosdk-i386.o kernel.o units/console.o units/multiboot.o units/system.o --emit-relocs --strip-all -T kernel.ld -o paskernel -Map kernel.map
 clean:
 	rm -f *.o
-	rm -f kernel
+	rm -f *.ppu
+	rm -f *.s
+	rm -f paskernel
+	rm -f units/*.o
+	rm -f units/*.ppu
+	rm -f units/*.s
